[tool.poetry]
name = "instanssi.org"
version = "1.0.0"
description = "Instanssi website"
authors = ["Tuomas Virtanen <katajakasa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
django-countries = "^7.4.2"
django-crispy-forms = "^2.0"
crispy-bootstrap3 = "^2024.1"
django-imagekit = "^5.0.0"
django-classy-tags = "^4.0.0"
django-filter = "^24.1"
django-compressor = "^4.1"
django-qr-code = "^4.0.1"
django-auditlog = "^2.2.1"
django-admin-csvexport = "^2.2"
django-ical = "^1.9.2"
celery = "^5.3.4"
Pillow = "^10.3.0"
social-auth-core = "^4.4.1"
social-auth-app-django = "^5.4.1"
django-libsass = "^0.9"
requests = "^2.32.0"
sentry-sdk = "^2.3.1"
djangorestframework = "^3.15.1"
django-rest-knox = "^4.2.0"
tabulate = "^0.9.0"
arrow = "^1.2.3"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
unidecode = "^1.3.6"
yarl = "^1.9.2"
orjson = "^3.10.3"
ffmpeg-python = "^0.2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
redis = {extras = ["hiredis"], version = "^5.0.2"}
mastodon-py = "^1.8.1"
nh3 = "^0.2.15"
drf-spectacular = "^0.27.1"

[tool.poetry.group.dev.dependencies]
Faker = "^23.3.0"
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.0.2"
pytest-django = "^4.8.0"
pytest-cov = "^4.1.0"
freezegun = "^1.4.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 109
target-version = ['py311']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "Instanssi.test_settings"
FAIL_INVALID_TEMPLATE_VARS = true
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "**/migrations/*",
]
