[tool.poetry]
name = "instanssi.org"
version = "1.0.0"
package-mode = false
description = "Instanssi website"
authors = ["Tuomas Virtanen <katajakasa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.2"
django-countries = "^7.4.2"
django-crispy-forms = "^2.0"
crispy-bootstrap3 = "^2024.1"
django-imagekit = "^5.0.0"
django-classy-tags = "^4.0.0"
django-filter = "^25.1"
django-compressor = "^4.1"
django-qr-code = "^4.0.1"
django-auditlog = "^3.0.0"
django-admin-csvexport = "^2.2"
django-ical = "^1.9.2"
celery = "^5.3.4"
Pillow = "^11.3.0"
social-auth-core = "^4.4.1"
social-auth-app-django = "^5.6.0"
django-libsass = "^0.9"
requests = "^2.32.0"
sentry-sdk = "^2.14.0"
djangorestframework = "^3.15.2"
django-rest-knox = "^5.0.1"
tabulate = "^0.9.0"
arrow = "^1.2.3"
gunicorn = "^23.0.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
unidecode = "^1.3.6"
yarl = "^1.12.1"
orjson = "^3.11.0"
ffmpeg-python = "^0.2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.2"}
redis = {extras = ["hiredis"], version = "^6.2.0"}
mastodon-py = "^2.0.1"
nh3 = "^0.3.0"
drf-spectacular = "^0.28.0"

[tool.poetry.group.dev.dependencies]
Faker = "^29.0.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"
freezegun = "^1.5.5"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 109
target-version = ['py313']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "Instanssi.test_settings"
FAIL_INVALID_TEMPLATE_VARS = true
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "**/migrations/*",
]
