[tool.poetry]
name = "instanssi.org"
version = "1.0.0"
package-mode = false
description = "Instanssi website"
authors = ["Tuomas Virtanen <katajakasa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
Django = "^6.0"
django-countries = "^8.0.0"
django-crispy-forms = "^2.0"
crispy-bootstrap3 = "^2024.1"
django-imagekit = "^6.0.0"
django-classy-tags = "^4.0.0"
django-filter = "^25.1"
django-compressor = "^4.1"
django-qr-code = "^4.0.1"
django-auditlog = "^3.4.1"
django-admin-csvexport = "^2.4.1"
django-ical = "^1.9.2"
celery = "^5.6.2"
Pillow = "^12.1.1"
social-auth-core = "^4.8.3"
social-auth-app-django = "^5.7.0"
django-libsass = "^0.9"
requests = "^2.32.0"
sentry-sdk = "^2.52.0"
djangorestframework = "^3.15.2"
django-rest-knox = "^5.0.1"
tabulate = "^0.9.0"
arrow = "^1.2.3"
gunicorn = "^25.0.1"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
unidecode = "^1.3.6"
yarl = "^1.12.1"
orjson = "^3.11.0"
ffmpeg-python = "^0.2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.2"}
redis = {extras = ["hiredis"], version = "^7.0.1"}
mastodon-py = "^2.1.4"
nh3 = "^0.3.0"
drf-spectacular = "^0.29.0"
django-cleanup = "^9.0.0"
stream-zip = "^0.0.84"
pywebpush = "^2.0.1"

[tool.poetry.group.dev.dependencies]
Faker = "^40.1.2"
black = "^26.1.0"
isort = "^7.0.0"
pytest = "^9.0.2"
pytest-django = "^4.11.1"
pytest-cov = "^7.0.0"
freezegun = "^1.5.2"
requests-mock = "^1.12.1"
pytest-xdist = "^3.8.0"
mypy = "^1.19.1"
django-stubs = "^5.2.9"
djangorestframework-stubs = "^3.16.7"
django-filter-stubs = "^0.1.3"
types-tabulate = "^0.9.0.20241207"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 109
target-version = ['py313']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "Instanssi.test_settings"
FAIL_INVALID_TEMPLATE_VARS = true
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "**/migrations/*",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "knox.*",
    "imagekit.*",
    "auditlog.*",
    "celery.*",
    "ffmpeg.*",
    "crispy_forms.*",
    "pywebpush.*",
    "py_vapid.*",
    "django_ical.*",
    "csvexport.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "Instanssi.test_settings"
